# whatstrade

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  index.ts  package.json
apps/ai-playground/: .env.example  Dockerfile  README.md  USAGE.md  package.json  prompts.example.txt
apps/ai-playground/src/: index.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
apps/server/src/processors/: message-processor.ts
apps/server/src/services/: whatsapp-listener.ts
apps/web/: components.json  index.html  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts  tauri.d.ts
apps/web/src-tauri/: .env.example  .taurignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/crates/ai-client/: Cargo.toml  README.md
apps/web/src-tauri/crates/ai-client/examples/: pharma_parsing.rs  structured_output.rs
apps/web/src-tauri/crates/ai-client/examples/prompts/: pharma_system.txt
apps/web/src-tauri/crates/ai-client/src/: client.rs  config.rs  lib.rs  types.rs
apps/web/src-tauri/crates/playground/: Cargo.toml  README.md  RESEARCH.md
apps/web/src-tauri/crates/playground/examples/: cli.rs
apps/web/src-tauri/crates/playground/src/: client.rs  config.rs  display.rs  executor.rs  lib.rs  main.rs  types.rs
apps/web/src-tauri/crates/utilities/: Cargo.toml
apps/web/src-tauri/crates/utilities/src/: id.rs  lib.rs  params.rs
apps/web/src-tauri/crates/whatsapp/: Cargo.toml  README.md
apps/web/src-tauri/crates/whatsapp/src/: error.rs  events.rs  go_service_provider.rs  lib.rs  mock_provider.rs  provider.rs  types.rs  wa_rs_provider.rs
apps/web/src-tauri/db/entity/: Cargo.toml  README.md
apps/web/src-tauri/db/entity/src/: lib.rs
apps/web/src-tauri/db/entity/src/entities/: mod.rs
apps/web/src-tauri/db/entity/src/entities/account/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/audit_log/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/group/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/match/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/matching_weights/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/offer/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/request/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/review_item/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/session/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/user/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/verification/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/whatsapp_message_queue/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/entities/whatsapp_session/: dto.rs  mod.rs
apps/web/src-tauri/db/service/: Cargo.toml
apps/web/src-tauri/db/service/src/: error.rs  lib.rs  manager.rs  migration.rs  types.rs
apps/web/src-tauri/db/service/src/prompts/: pharma_system.txt  pharma_user.txt
apps/web/src-tauri/db/service/src/services/: audit.rs  auth.rs  group.rs  jwt.rs  matching.rs  mod.rs  offer.rs  request.rs  review.rs  simulate.rs  stats.rs  user.rs  weights.rs  whatsapp.rs
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src-tauri/src/error/: mod.rs
apps/web/src-tauri/src/ipc/: mod.rs
apps/web/src-tauri/src/ipc/commands/: audit.rs  auth.rs  groups.rs  health.rs  matches.rs  mod.rs  offers.rs  requests.rs  review.rs  simulate.rs  stats.rs  weights.rs  whatsapp.rs
apps/web/src-tauri/src/ipc/response/: mod.rs
apps/web/src-tauri/src/state/: mod.rs
apps/web/src/api/: audit.ts  auth.ts  dashboard.ts  groups.ts  health.ts  matches.ts  message-queue.ts  offers.ts  requests.ts  review.ts  simulate.ts  weights.ts  whatsapp.ts
apps/web/src/components/: Layout.tsx  mode-toggle.tsx  sign-in-form.tsx  sign-up-form.tsx  theme-provider.tsx  user-menu.tsx
apps/web/src/components/layout/: MenuBar.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  index.tsx
apps/web/src/config/: constants.ts  menu-config.tsx  navigation-config.ts
apps/web/src/hooks/: audit.ts  audit.tsx  auth.ts  dashboard.ts  dashboard.tsx  groups.ts  groups.tsx  health.ts  matches.ts  matches.tsx  message-queue.ts  offers.ts  offers.tsx  requests.ts  requests.tsx  review.ts  review.tsx  simulate.ts  simulate.tsx  stats.ts  weights.ts  weights.tsx  whatsapp.ts  whatsapp.tsx  window.ts
apps/web/src/lib/: auth-client.ts  logger.ts  query-client.ts  tauri-api.ts
apps/web/src/routes/: $.tsx  __root.tsx  dashboard.tsx  index.tsx
apps/web/src/routes/_app/: index.tsx  route.tsx
apps/web/src/routes/audit/: index.tsx
apps/web/src/routes/groups/: index.tsx
apps/web/src/routes/login/: index.tsx
apps/web/src/routes/matches/: index.tsx
apps/web/src/routes/offers/: index.tsx
apps/web/src/routes/requests/: index.tsx
apps/web/src/routes/review/: index.tsx
apps/web/src/routes/simulate/: index.tsx
apps/web/src/routes/weights/: index.tsx
apps/web/src/stores/: layout-store.ts
apps/web/src/utils/: colors.test.ts  colors.ts  orpc.ts  scoring.test.ts  scoring.ts
docker/: README.md
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/init/: 01-init-extensions.sql
services/whatsapp/: .air.toml  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP.md  Taskfile.yml  go.mod  go.sum
services/whatsapp/cmd/server/: main.go
services/whatsapp/internal/adapter/api/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  server.go
services/whatsapp/internal/adapter/repository/: models.go  postgres.go
services/whatsapp/internal/config/: config.go  config_test.go
services/whatsapp/internal/domain/: errors.go  group.go  group_test.go  message.go  message_test.go  session.go
services/whatsapp/internal/port/: repository.go  whatsapp.go
services/whatsapp/internal/testutil/: mocks.go
services/whatsapp/internal/usecase/: manage_groups.go  manage_groups_test.go  mocks_test.go  process_message.go  process_message_test.go
services/whatsapp/pkg/logger/: logger.go  logger_test.go
(+80 files in other folders)
