[workspace]
members = [".", "crates/*", "db/*"]
resolver = "2"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
db_entity = { workspace = true }
db_service = { workspace = true }
utilities = { workspace = true }

derive-getters.workspace = true
dotenvy.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
serde.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
typed-builder.workspace = true
uuid.workspace = true

[workspace.dependencies]
db_entity = { path = "db/entity" }
db_service = { path = "db/service" }
utilities = { path = "crates/utilities" }

chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
derive-getters = "0.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
rust_decimal = { version = "1.36", features = ["serde"] }
# SeaORM v2 dependencies
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "entity-registry",
    "schema-sync",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
thiserror = "2.0.18"
typed-builder = "0.23.2"
uuid = { version = "1.20.0", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

# JWT (for auth service)
jsonwebtoken = "9.3"

# Password hashing
argon2 = "0.5"
