[package]
name = "ai-client"
version = "0.1.0"
edition = "2024"
authors = ["WhatsTrade Team"]
description = "OpenAI-compatible AI client with streaming and structured output support"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.40.2", features = ["chat-completion"] }
chrono.workspace = true
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.32"
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.1"
tokio = { version = "1.52", features = ["full"] }
