[package]
name = "db_entity"
version = "0.1.0"
edition = "2024"

[dependencies]
# SeaORM v2 dependencies
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

# DTO and builder dependencies
derive-getters = "0.5.0"
typed-builder = "0.23.2"
