[package]
name = "db_service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
chrono.workspace = true
derive-getters.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-builder.workspace = true
schemars.workspace = true
tera.workspace = true

ai-client.workspace = true
db_entity.workspace = true
utilities.workspace = true
